Closed Bug 496020 Opened 15 years ago Closed 15 years ago

nsCSSFrameConstructor::BeginUpdate is called when scripts are not blocked

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: tnikkel, Assigned: tnikkel)

Details

Attachments

(1 file)

I put an assertion that scripts are blocked in nsCSSFrameConstructor::BeginUpdate and it gets hit a lot. Noticed in bug 495728.
Looks like the only place I was seeing this hit was from PresShell::ProcessReflowCommands where we do WillDoReflow() (which calls BeginUpdate) and then calculate our deadline (doesn't seem too dangerous) and then enter a script blocker. Simply moving the WillDoReflow call after the script blocker would fix this if we wanted to.
I think it's worth doing that, yes.  That's the ordering in ResizeReflow() and I'd like us to be consistent between the two.
Attached patch patchSplinter Review
Assignee: nobody → tnikkel
Attachment #381878 - Flags: review?(bzbarsky)
Attachment #381878 - Flags: superreview+
Attachment #381878 - Flags: review?(bzbarsky)
Attachment #381878 - Flags: review+
Keywords: checkin-needed
Pushed http://hg.mozilla.org/mozilla-central/rev/4d671db4ccb7
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Keywords: checkin-needed
Is this wanted for the 1.9.1 branch?
status1.9.1: --- → ?
I don't think we need this on 1.9.1, basically just adding an assertion so we can catch problems.
status1.9.1: ? → ---
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: