Bug 496020 - "nsCSSFrameConstructor::BeginUpdate is called when scripts are not blocked." r+sr=bzbarsky